# rfsoc_quant_amc

./: .gitattributes  CITATION.cff  MANIFEST.in  README.md  setup.py
boards/RFSoC2x2/: README.md  block_design.tcl  constraints.xdc  make_block_design.tcl  make_project.tcl  makefile
boards/RFSoC2x2/rfsoc_quant_amc/: README.md  block_design.tcl  make_project.tcl
boards/RFSoC4x2/: README.md  block_design.tcl  make_bitstream.tcl  make_block_design.tcl  make_project.tcl
boards/RFSoC4x2/rfsoc_quant_amc/: test.txt
matlab/: README.md  model_cnn.slx  setup_imports.m
matlab/+cnn/: add_bias.m  cnn.m  cnn_float.m  cnn_gemm.m  cnn_gemm_amc.m  conv.m  conv_quantised.m  quantized_relu.m  softmax_float.m
rfsoc_quant_amc/: demo.ipynb  helper.py  widget.py
rfsoc_quant_amc/data/: transmit_test_SNR.pkl
rfsoc_quantised_amc/: .gitattributes  amc_cnn_overlay.py  amc_widget.py
rfsoc_quantised_amc/bitstreams/: rfsoc_quant_amc.hwh
train/: README.md  pyproject.toml  train_float.ipynb  train_quants_16_8_4_2.ipynb
train/dataset_generation/: README.md
train/dataset_generation/boards/: README.md
train/dataset_generation/boards/RFSoC4x2/: dataset_builder.ipynb
train/dataset_generation/boards/RFSoC4x2/bitstream/: rfsoc_amc_qat.hwh
train/dataset_generation/boards/RFSoC4x2/dataset_building/: overlay.py
train/dataset_generation/boards/RFSoC4x2/received_set/: README.md
train/dataset_generation/boards/RFSoC4x2/transmit_set/: README.md
train/dataset_generation/matlab/: README.md  dict_build.py  generateModulationSchemesSNR.m.m  loopSNRs.m
(+18739 files in other folders)
