[tool.poetry]
name = "amc_rfsoc"
version = "0.1.0"
description = ""
authors = ["Andrew Maclellan <a.maclellan@strath.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
brevitas = "^0.10.3"
future = "^1.0.0"
numpy = "1.24.4"
scipy = "^1.5"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
matplotlib = "^3.3"
pandas = "^1.1"
scikit-learn = "^0.24"
tqdm = "^4.66.5"
dill = "^0.3.9"
torchsummary = "^1.5.1"
mat73 = "^0.65"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
